--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,7 +1,7 @@
 // App.scss
 
 // Variables
-$primary-color: #240b36; // A deep purple
+$primary-color: #be7f20; // A deep purple
 $secondary-color: #ff7f50; // Coral
 $app-background-color: #f0f0f5; // Very light gray
 $app-link-color: #007bff; // Standard blue
